# rsomics-gc-windows

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  smoke.rs
tests/golden/: n_windows.fa  n_windows.fa.fai  small.fa  small.fa.fai
